--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -1,6 +1,7 @@
 \label{section:results}
 
-\begin{figure*}[t!]
+\begin{table*}[t]
+\caption{LAVA Injection results for open source programs of various sizes}
 \centering\footnotesize
 \begin{tabular}{c|c|c|c|c|c|c|c|c|c|c}
         &         & Num       & Lines     &        &        & Potential & Validated  &         & Inj Time \\
@@ -11,11 +12,10 @@ readelf & 2.25    & 12        & 21052     & 3849   & 266    & 276367    & 1064  
 bash    & 4.3     & 143       & 98871     & 3832   & 604    & 447645    & 192        & 9.6\%   & 153     \\  % time verified.  
 tshark  & 1.8.2   & 1272      & 2186252   & 9853   & 1037   & 1240777   & 354        & 17.7\%  & 542     \\
 \end{tabular} 
-\caption{LAVA Injection results for open source programs of various sizes.
-For each, a single input file was used to perform a taint analysis with PANDA.
-Various program and dynamic trace statistics are reported as well as DUA, attack point (ATP), and yield (fraction of injected bugs that result in a segmentation violation).}
+%For each, a single input file was used to perform a taint analysis with PANDA.
+%Various program and dynamic trace statistics are reported as well as DUA, attack point (ATP), and yield (fraction of injected bugs that result in a segmentation violation).}
 \label{table:insertion-results}
-\end{figure*}
+\end{table*}
 
 We evaluated LAVA in three ways.
 First, we injected large numbers of bugs into four open source programs: file, readelf (from binutils), bash, and tshark (the command-line version of the packet capture and analysis tool Wireshark).
@@ -59,7 +59,8 @@ Thus, when we report, in Table~\ref{table:insertion-results} that for \verb+tsha
 As the injected bug is designed to be triggered only if a particular set of four bytes in the input is set to a magic value, we tested with both the original input and with the modified one that contained the trigger. 
 We did not encounter any situation in which the original input triggered a crash.
 
-\begin{figure}[b]
+\begin{table}[b]
+\caption{Yield as a function of both $mLIV$ and $mTCN$}
 \centering\footnotesize
 \begin{tabular}{l|l|l|l|l} 
        & \multicolumn{3}{c}{$mLIV$} &  \\  
@@ -68,11 +69,10 @@ $[0,10)$ &       51.9\%   & 22.9\%     & 17.4\%       & 11.9\%          \\
 $[10,100)$ &     --       & 0          & 0            & 0     \\
 $[100,+\inf]$ &  --       & --         & --           & 0     \\ 
 \end{tabular}
-\caption{Yield as a function of both $mLIV$ and $mTCN$.  
-Yield is highest for DUAs with low values for both of these measures, i.e., that are both a relatively uncomplicated function of input bytes and also that derive from input bytes involved in deciding fewer branches.
-Cells for which there were no samples are indicated with the contents '--'.}
+%Yield is highest for DUAs with low values for both of these measures, i.e., that are both a relatively uncomplicated function of input bytes and also that derive from input bytes involved in deciding fewer branches.
+%Cells for which there were no samples are indicated with the contents '--'.}
 \label{table:yield-breakdown}
-\end{figure}
+\end{table}
 
 Yield varies considerably from less than 10\% to over 50\%.
 To understand this better, we investigated the relationship between our two taint-based measures and yield.
@@ -88,8 +88,6 @@ However, we were surprised to observe that $mLIV$ values of over 1000 still gave
 
 It would appear that LAVA can inject a very large number of bugs into a program.
 If we extrapolate from yield numbers in Table~\ref{table:insertion-results}, we estimate there would be almost 400,000 real bugs if all were tested.
-
-\noindent
 But how well distributed is this set of bugs? 
 For programs like \verb+file+ and \verb+bash+, between 11 and 44 source files  are involved in a potential bug.
 In this case, the bugs appear to be fairly well distributed, as those numbers represent 58\% and 31\% of the total for each, respectively.
@@ -201,7 +199,8 @@ In knob-and-trigger bugs, two different parts of the input are used in different
 In range bugs, rather than triggering on a single value out of $2^{32}$, the size of the haystack varies.
 Note that a range of $2^0$ is equivalent to the bug presented in Figure~\ref{src:dua-use}.
 
-\begin{figure}[h]
+\begin{table}[h]
+\caption{Percentage of bugs found in \emph{LAVA-1} corpus} %. % as a function of $Bug Type$ and $Tool Type$.  
 \centering\footnotesize
 \begin{tabular}{l|l|l|l|l|l|l} 
 Tool   &                     \multicolumn{6}{|c}{Bug Type}                           \\  \hline  
@@ -211,11 +210,11 @@ FUZZER &    0       & 0           & 0            & 7\%        & 58\%         & 0
 %$CSA_1$ &    0       & 0           & 0            & 0          & 0            & 0         \\
 SES    &    8\%     & 0           & 9\%          & 21\%       & 0            & 10\%         \\
 \end{tabular}
-\caption{Percentage of bugs found in \emph{LAVA-1} corpus. % as a function of $Bug Type$ and $Tool Type$.  
-FUZZER proved to be an effective vulnerability finding tool.
-However, it was only able to find bugs that allowed an enormous range of possible inputs to trigger the bug.}
+%\caption{Percentage of bugs found in \emph{LAVA-1} corpus. % as a function of $Bug Type$ and $Tool Type$.  
+%FUZZER proved to be an effective vulnerability finding tool.
+%However, it was only able to find bugs that allowed an enormous range of possible inputs to trigger the bug.}
 \label{table:eval1-file}
-\end{figure}
+\end{table}
 
 The results of this evaluation are summarized in Table~\ref{table:eval1-file}.
 Five different ranges were employed: $2^0, 2^7, 2^{16}, 2^{21}, 2^{28}$. 
@@ -247,7 +246,8 @@ Another copy has 57 bugs in \verb+md5sum+, another has 28 bugs in \verb+uniq+.
 Finally, there is a copy of \verb+coreutils+ with 2136 bugs existing all at once and individually expressible, in \verb+who+.
 
 
-\begin{figure}[h]
+\begin{table}[h]
+\caption{Bugs found in \emph{LAVA-M} corpus by tool type}
 \centering\footnotesize
 \begin{tabular}{l|c|c|c|c} 
 \multirow{2}{*}{Tool Name} & \multirow{2}{*}{Total Bugs} & \multicolumn{3}{c}{Unique Bugs Found} \\
@@ -258,9 +258,8 @@ Finally, there is a copy of \verb+coreutils+ with 2136 bugs existing all at once
 \verb+who+    &    2136    & 0            & 18         & 18               \\
 Total         &    2265    & 16           & 27         & 41               \\
 \end{tabular}
-\caption{Bugs found in \emph{LAVA-M} corpus by each tool type.}
 \label{table:tool-eval-results-coreutils}
-\end{figure}
+\end{table}
 
 We ran FUZZER and SES against each program in \emph{LAVA-M}, with 5 hours of runtime for each program on machines with essentially unlimited RAM.
 \verb+md5sum+ ran with the \verb+-c+ argument, as if it were checking digests in a symbolic file.
