Remove extraneous commas

--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -44,7 +44,7 @@ Wil Robertson\IEEEauthorrefmark{3}, Frederick Ulrich\IEEEauthorrefmark{2}, Ryan 
 \begin{abstract}
 
 Work on automating vulnerability discovery has long been hampered by a shortage of ground-truth corpora with which to evaluate tools and techniques.
-This lack of ground truth prevents authors and users of tools, alike, from being able to measure such fundamental quantities as  miss and false alarm rates.
+This lack of ground truth prevents authors and users of tools alike from being able to measure such fundamental quantities as  miss and false alarm rates.
 In this paper, we present LAVA, a novel dynamic taint analysis-based technique for producing ground-truth corpora by quickly and automatically injecting large numbers of realistic bugs into program source code.
 Every LAVA bug is accompanied by an input that triggers it whereas normal inputs are extremely unlikely to do so.
 These vulnerabilities are synthetic but, we argue, still realistic, in the sense that they are embedded deep within programs and are triggered by real inputs.
