slightly better concluding sentence

--- a/paper1/conclusion.tex
+++ b/paper1/conclusion.tex
@@ -3,7 +3,7 @@ LAVA has already been used to introduce over 4000 realistic buffer overflows int
 We have used LAVA corpora to evaluate the detection powers of state-of-the-art bug finding tools.
 The taint-based measures employed by LAVA to identify attacker-controlled data for use in creating new vulnerabilities are powerful and should be usable to inject many and diverse vulnerabilities, but there are likely fundamental limits; LAVA will not be injecting logic errors into programs anytime soon.
 Nevertheless, LAVA is ready for immediate use as an on-demand source of realistic ground truth vulnerabilities for classes of serious vulnerabilities that are still abundant in mission-critical code.
-It is our hope that LAVA can drive both development and evaluation of tools and techniques for vulnerability discovery.
+It is our hope that LAVA can drive both the development and evaluation of advanced tools and techniques for vulnerability discovery.
 
 %LAVA is fast, injecting a new buffer overflow into a program like \verb+file+ in less than 20 seconds.
 
