--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -219,7 +219,7 @@ SES    &    8\%     & 0           & 9\%          & 21\%       & 0            & 1
 \end{table}
 
 The results of this evaluation are summarized in Table~\ref{table:eval1-file}.
-Ranges of five different sizes were employed: $2^0, 2^7, 2^{14}, 2^{21}, 2^{28}$. 
+Ranges of five different sizes were employed: $2^0$ (12 bugs), $2^7$ (10 bugs), $2^{14}$ (11 bugs), $2^{21}$ (14 bugs), and $2^{28}$ (12 bugs); we used 10 knob-and-trigger bugs.
 We examined all output from both tools.
 FUZZER ran for five hours on each bug and found bugs in the larger ranges ($2^{14}$, $2^{21}$, and $2^{28}$).
 It was also able to uncover 20\% of the knob-and-trigger bugs, perhaps because the knob and trigger could be fuzzed independently.
