--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -16,12 +16,12 @@
 %\usepackage[disable]{todonotes}
 
 %opening
-\title{LAVA: Large-scale Automated Vulnerability Addition
-  \thanks{This work is sponsored by the Assistant Secretary of Defense
-    for Research \& Engineering under Air Force Contract
-    \#FA8721-05-C-0002.  Opinions, interpretations, conclusions and
-    recommendations are those of the author and are not necessarily
-    endorsed by the United States Government.} }
+\title{LAVA: Large-scale Automated Vulnerability Addition}
+%  \thanks{This work is sponsored by the Assistant Secretary of Defense
+%    for Research \& Engineering under Air Force Contract
+%    \#FA8721-05-C-0002.  Opinions, interpretations, conclusions and
+%    recommendations are those of the author and are not necessarily
+%    endorsed by the United States Government.} }
 
 %\author{
 %\IEEEauthorblockN{Brendan Dolan-Gavitt\IEEEauthorrefmark{1}, Patrick Hulin\IEEEauthorrefmark{2}, Engin Kirda\IEEEauthorrefmark{3}, Tim Leek\IEEEauthorrefmark{2}, Andrea Mambretti\IEEEauthorrefmark{3}, \\
