--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -6,6 +6,11 @@
 \usepackage{amsmath}
 \usepackage{multirow}
 
+\usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
+
+
 %\documentclass[a4paper,10pt]{article}
 \usepackage[utf8]{inputenc}
 %\usepackage{times}
